Camionxhtml2 y edicion de my_pers....

--- a/src/main/webapp/camion/add-camion.xhtml
+++ b/src/main/webapp/camion/add-camion.xhtml
@@ -34,6 +34,9 @@
 
         </h:panelGrid>
         <p:commandButton value="Guardar Camión" action="#{camionController.saveCamion}" update="@form" />
+        <p:commandButton value="Volver"
+                         action="#{camionController.backList()}"
+                         icon="pi pi-edit"/>
     </h:form>
 </h:body>
 </html>
