Camionxhtml2 y edicion de my_pers....

--- a/src/main/webapp/camion/add-camion.xhtml
+++ b/src/main/webapp/camion/add-camion.xhtml
@@ -33,9 +33,10 @@
             <p:inputText id="tipo" value="#{camionController.camion.type}" required="true" />
 
         </h:panelGrid>
-        <p:commandButton value="Guardar Camión" action="#{camionController.saveCamion}" update="@form" />
+        <p:commandButton value="Guardar Camión" action="#{camionController.saveCamion()}" update="@form" />
         <p:commandButton value="Volver"
-                         action="#{camionController.backList()}"
+                         immediate="true"
+                         action="#{camionController.backList}"
                          icon="pi pi-edit"/>
     </h:form>
 </h:body>
