--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -38,7 +38,7 @@
                                 <p:menuitem value="Nuevo" action="/Agente/add-agente?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Camiones">
-                                <p:menuitem value="Listar" action="/camion/list-camiones?faces-redirect=true"/>
+                                <p:menuitem value="Listar" action="/camion/list-camion?faces-redirect=true"/>
                                 <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Empresas">
