--- a/src/main/webapp/camion/update-camion.xhtml
+++ b/src/main/webapp/camion/update-camion.xhtml
@@ -35,7 +35,8 @@
         </h:panelGrid>
         <p:commandButton value="Guardar Camión" action="#{camionController.updateCamion()}" update="@form" />
         <p:commandButton value="Volver"
-                         action="#{camionController.backList()}"
+                         immediate="true"
+                         action="#{camionController.backList}"
                          icon="pi pi-edit"/>
     </h:form>
 </h:body>
