--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -42,7 +42,7 @@
                                 <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Empresas">
-                                <p:menuitem value="Listar" action="/empresa/list-empresas?faces-redirect=true"/>
+                                <p:menuitem value="Listar" action="/empresa/list-empresa?faces-redirect=true"/>
                                 <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Informes" rendered="#{userLogged.admin}">
