--- a/src/main/webapp/empresa/add-empresa.xhtml
+++ b/src/main/webapp/empresa/add-empresa.xhtml
@@ -1,40 +1,31 @@
-<!-- saveCamion.xhtml -->
+<!-- saveEmpresa.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Guardar Camión</title>
+    <title>Guardar Empresa</title>
 </h:head>
 <h:body>
     <h:form>
-        <h1>Registrar Nuevo Camión</h1>
+        <h1>Registrar Nueva Empresa</h1>
 
         <p:messages autoUpdate="true" />
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputLabel for="placa" value="Placa:" />
-            <p:inputText id="placa" value="#{camionController.camion.licensePlate}" required="true" />
+            <h:outputLabel for="companyName" value="Nombre:" />
+            <p:inputText id="companyName" value="#{empresaController.empresa.companyName}" required="true" />
 
-            <h:outputLabel for="numero_unidad" value="NumeroUnidad:" />
-            <p:inputText id="numero_unidad" value="#{camionController.camion.unitNumber}" required="true" />
+            <h:outputLabel for="address" value="Direccion:" />
+            <p:inputText id="address" value="#{empresaController.empresa.address}" required="true" />
 
-            <h:outputLabel for="marca" value="Marca:" />
-            <p:inputText id="marca" value="#{camionController.camion.brand}" required="true" />
-
-            <h:outputLabel for="color" value="Color:" />
-            <p:inputText id="color" value="#{camionController.camion.color}" required="true" />
-
-            <h:outputLabel for="modelo" value="Modelo:" />
-            <p:inputText id="modelo" value="#{camionController.camion.model}" required="true" />
-
-            <h:outputLabel for="tipo" value="Tipo:" />
-            <p:inputText id="tipo" value="#{camionController.camion.type}" required="true" />
+            <h:outputLabel for="contact" value="Contacto:" />
+            <p:inputText id="contact" value="#{empresaController.empresa.contact}" required="true" />
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar Camión" action="#{camionController.saveCamion()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Guardar Empresa" action="#{empresaController.saveEmpresa()}" update="@form" icon="pi pi-save"/>
 
     </h:form>
 </h:body>
