--- a/src/main/webapp/agente/add-agente.xhtml
+++ b/src/main/webapp/agente/add-agente.xhtml
@@ -14,8 +14,8 @@
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputLabel for="placa" value="Placa:" />
-            <p:inputText id="placa" value="#{camionController.camion.licensePlate}" required="true" />
+            <h:outputLabel for="id" value="Cedula:" />
+            <p:inputText id="id" value="#{agenteController.agentes.licensePlate}" required="true" />
 
             <h:outputLabel for="numero_unidad" value="NumeroUnidad:" />
             <p:inputText id="numero_unidad" value="#{camionController.camion.unitNumber}" required="true" />
