--- a/src/main/webapp/agente/update-agente.xhtml
+++ b/src/main/webapp/agente/update-agente.xhtml
@@ -14,27 +14,27 @@
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputText for="placa" value="Placa:" />
-            <h:outputText id="placa" value="#{camionController.camion.licensePlate}"/>
+            <h:outputText for="id" value="Cedula:" />
+            <h:outputText id="id" value="#{agenteController.agente.id}"/>
 
-            <h:outputLabel for="numero_unidad" value="NumeroUnidad:" />
-            <p:inputText id="numero_unidad" value="#{camionController.camion.unitNumber}" required="true" />
+            <h:outputLabel for="name" value="NumeroUnidad:" />
+            <p:inputText id="name" value="#{agenteController.agente.name}" required="true" />
 
-            <h:outputLabel for="marca" value="Marca:" />
-            <p:inputText id="marca" value="#{camionController.camion.brand}" required="true" />
+            <h:outputLabel for="lastname" value="Marca:" />
+            <p:inputText id="lastname" value="#{agenteController.agente.lastname}" required="true" />
 
-            <h:outputLabel for="color" value="Color:" />
-            <p:inputText id="color" value="#{camionController.camion.color}" required="true" />
+            <h:outputLabel for="agentType" value="Color:" />
+            <p:inputText id="agentType" value="#{agenteController.agente.agentType}" required="true" />
 
-            <h:outputLabel for="modelo" value="Modelo:" />
-            <p:inputText id="modelo" value="#{camionController.camion.model}" required="true" />
+            <h:outputLabel for="photo" value="Modelo:" />
+            <p:inputText id="photo" value="#{agenteController.agente.photo}" required="true" />
 
-            <h:outputLabel for="tipo" value="Tipo:" />
-            <p:inputText id="tipo" value="#{camionController.camion.type}" required="true" />
+            <h:outputLabel for="filename" value="Tipo:" />
+            <p:inputText id="filename" value="#{agenteController.agente.filename}" required="true" />
 
         </h:panelGrid>
-        <p:commandButton value="Volver" immediate="true" action="#{camionController.backList}" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar Camión" action="#{camionController.updateCamion()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Volver" immediate="true" action="#{agenteController.backList}" icon="pi pi-arrow-left"/>
+        <p:commandButton value="Guardar Camión" action="#{agenteController.updateAgente()}" update="@form" icon="pi pi-save"/>
     </h:form>
 </h:body>
 </html>
